--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@vue/cli": "^4.1.2",
     "core-js": "^3.4.4",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "vfc": "^2.0.0",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-simple-progress": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
